--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "debug": "~2.6.9",
     "dotenv": "^16.3.1",
     "express": "~4.16.1",
+    "express-async-handler": "^1.2.0",
+    "express-validator": "^7.0.1",
     "mongoose": "^7.3.3",
     "morgan": "~1.9.1"
   },
