--- a/package.json
+++ b/package.json
@@ -8,14 +8,17 @@
     "serverstart": "SET DEBUG=link-api:* & npm run devstart"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^16.3.1",
     "express": "~4.16.1",
     "express-async-handler": "^1.2.0",
     "express-validator": "^7.0.1",
+    "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.3.3",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "nodemailer": "^6.9.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
