--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "nodemailer": "^6.9.3"
   },
   "devDependencies": {
+    "mongodb-memory-server": "^8.13.0",
     "nodemon": "^3.0.1",
     "supertest": "^6.3.3"
   }
