--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "node ./bin/www",
     "devstart": "nodemon ./bin/www",
-    "serverstart": "SET DEBUG=link-api:* & npm run devstart"
+    "serverstart": "SET DEBUG=link-api:* & npm run devstart",
+    "test": "jest"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -22,6 +23,7 @@
     "nodemailer": "^6.9.3"
   },
   "devDependencies": {
+    "jest": "^29.6.1",
     "mongodb-memory-server": "^8.13.0",
     "nodemon": "^3.0.1",
     "supertest": "^6.3.3"
