--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "socket.io": "^4.7.1"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.0.2",
     "jest": "^29.6.1",
     "mongodb-memory-server": "^8.13.0",
     "nodemon": "^3.0.1",
